--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="countries.js"></script>
+<script type="text/javascript" src="us-states.js"></script>
 <div class="map-container">
     
     <div class = "map-frame">
